--- a/index.html
+++ b/index.html
@@ -8,8 +8,37 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="element">
-        <img src="https://cdn.betterttv.net/emote/5e9a24c97e090362f8b08fdd/3x.gif" alt="pepeJAM">
-    </div>
+    <header class="navbar">
+        <img class="logo" src="https://static.wikia.nocookie.net/nppublic/images/3/3c/RoostersRestEmblem2.png" alt="logo">
+        <nav>
+            <ul>
+                <li class="nav-links"><a href="#HOME">HOME</a></li>
+                <li class="nav-links"><a href="#ABOUT">ABOUT</a></li>
+                <li class="nav-links"><a href="#CONTACT US">CONTACT US</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div>
+            <h1>Roosters Rest</h1>
+            </div>
+                <div class="element">
+                    <img class="RR" src="https://static.wikia.nocookie.net/nopixel/images/f/fb/RoostersRestPic.png" alt="Roosters Rest">
+                </div>
+        </section><br><br><br><br><br><br><br><br><br>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-front-front">
+                    <img src="https://static.wikia.nocookie.net/nopixel/images/0/0e/Lang_whitesuit.png" alt="Lang Buddha">
+                </div>
+
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright</p>
+    </footer>
+
 </body>
 </html>
